--- a/src/components/AppHeader/AppHeader.module.css
+++ b/src/components/AppHeader/AppHeader.module.css
@@ -1,22 +1,25 @@
 .header {
-  display: flex;
+  /* display: flex; */
+  /* align-items: center; */
+  display: grid;
+  grid-template-columns: 15% 1fr ;
   position: relative;
-  align-items: center;
-  background: #1c1c21;
-}
 
-.headerContainer {
-  margin: 0 auto;
-  max-width: 1272px;
-  padding: 0 16px;
-  width: 100%;
+  background: lightgray;
+
+  border-bottom: 2px solid rgb(255, 166, 0);
 }
 
 .headerNav {
-  grid-gap: 8px;
+  display: flex;
   align-items: center;
-  display: grid;
-  gap: 8px;
-  grid-template-columns: repeat(2, auto) 1fr;
-  margin: 0 -20px;
+  gap: 15px;
 }
+
+.logo {
+  max-width: 200px;
+  display: flex;
+  align-items: flex-start;
+}
+
+
